--- a/css/gallery.css
+++ b/css/gallery.css
@@ -12,9 +12,9 @@ body {
   border: 5px solid black;
   margin: 0 auto;
   background-color: #8e68ff;
-  background-image: url('');
+  background-image: url("");
   background-repeat: no-repeat;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   background-size: 100%;
   margin-bottom: 25px;
@@ -23,7 +23,7 @@ body {
 
 .preview {
   width: 10%;
-  margin-left: 17%;
+  margin: 0 2%;
   border: 10px solid black;
 }
 
