--- a/css/gallery.css
+++ b/css/gallery.css
@@ -22,8 +22,10 @@ body {
 }
 
 .preview {
+  display: inline-block;
+  vertical-align: top;
   width: 10%;
-  margin: 0 2%;
+  margin: auto 2%;
   border: 10px solid black;
 }
 
